...
    case inProgress
    case addJourney
    case profile

    var title: String {
        switch self {
        case .favourites: "Favourites"
        case .myJourneys: "My Journeys"
        case .inProgress: "In Progress"
        case .addJourney: "New journey"
        case .profile: "Profile"
        }
    }

    var systemImage: String {
        switch self {
        case .favourites: "heart.fill"
...
